max-width some padding row1 image

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <p class="f-weight1">  Discover the benefits of data analytics and make better    decisions regarding revenue, customer 
                     experience, and overall efficiency..</p>
                 <div class="item p-t">
-                    <div class="items"><p class="f-size2 f-weight33">10k+ </p>
+                    <div class="items"><p class="f-size2 f-weight33">10K + </p>
                     <p class="F-opacity">companies</p></div>
                     <div class="items"><p class="f-size2 f-weight33">314</p>
                     <p class="F-opacity">templates</p></div>
-                    <div class="items last"><p class="f-size2 f-weight33">12m+</p>
+                    <div class="items last"><p class="f-size2 f-weight33">12M +</p>
                         <p class="F-opacity">queries</p></div>
                 </div>
             </div>
