padding top row 1 for items

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1 class="m-b1 f-weight4 f-size1">Get <span class="Alone">insights</span> that help your business grow.</h1>
                 <p class="f-weight1">  Discover the benefits of data analytics and make better    decisions regarding revenue, customer 
                     experience, and overall efficiency..</p>
-                <div class="item p-t">
+                <div class="item p-tt">
                     <div class="items"><p class="f-size2 f-weight33">10K + </p>
                     <p class="F-opacity">companies</p></div>
                     <div class="items"><p class="f-size2 f-weight33">314</p>
